[package]
name = "esp32_mqtt_publish"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s" # Optimize for size

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
# rust crates
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
mqtt-protocol = "0.11.2"

# ESP32 crates
embedded-hal = "0.2.7"
embedded-svc = "0.22.0"
esp-idf-hal = "0.38"
esp-idf-svc = "0.42"
esp-idf-sys = { version = "0.31.6", features = ["binstart", "native"] } # `native` uses ESP-IDF instead of PlatformIO

[build-dependencies]
anyhow = "1.0.50"
embuild = "0.28.5"
