[package]
name = "esp32_mqtt_publish"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s" # Optimize for size

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
# rust crates
anyhow = { version = "1.0.58", features = ["backtrace"] }
log = "0.4.17"
mqtt-protocol = "0.11.2"

# ESP32 crates
embedded-hal            = "0.2.7"
embedded-svc            = "0.22.0"
esp-idf-hal             = "0.38.0"
esp-idf-svc             = "0.42.0"
esp-idf-sys = { version = "0.31.6", features = ["binstart"] } # `native` uses ESP-IDF instead of PlatformIO
icm42670                = { git = "https://github.com/jessebraham/icm42670" }
shtcx = "0.10.0"
shared-bus = "0.2.4"

[build-dependencies]
anyhow = "1.0.58"
embuild = "0.29.2"
