[package]
name = "esp32-mqtt-publish"
authors = ["Kirill Mikhailov <kirill.mikhailov@espressif.com>"]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s" # Optimize for size

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
# rust crates
anyhow = { version = "1.0.58", features = ["backtrace"] }
log = "0.4.17"


embedded-hal            = "0.2.7"
embedded-svc            = "0.23.1"
esp-idf-hal             = "0.39.3"
esp-idf-svc             = { version = "0.43.4", features = ["std", "experimental"] }
esp-idf-sys             = { version = "0.31.11", features = ["binstart"] }
icm42670                = { git = "https://github.com/jessebraham/icm42670" }
shtcx = "0.10.0"
shared-bus = "0.2.4"
toml-cfg = "0.1.3"

[build-dependencies]
anyhow = "1.0.58"
embuild = "0.29.2"
